feat: 利用規約を書き込めるようにする
