# UniQUE-API/src/docs/swagger.yaml
@@ -47,6 +47,8 @@ definitions:
         type: string
       public_client:
         type: boolean
+      terms_url:
+        type: string
       updated_at:
         type: string
       user_id:
@@ -85,6 +87,8 @@ definitions:
         type: string
       public_client:
         type: boolean
+      terms_url:
+        type: string
       user_id:
         type: string
       website_url:
@@ -270,6 +274,8 @@ definitions:
         $ref: '#/definitions/routes.Nullable-string'
       public_client:
         $ref: '#/definitions/routes.Nullable-bool'
+      terms_url:
+        $ref: '#/definitions/routes.Nullable-string'
       website_url:
         $ref: '#/definitions/routes.Nullable-string'
     type: object
@@ -411,6 +417,8 @@ definitions:
         $ref: '#/definitions/routes.Nullable-string'
       public_client:
         $ref: '#/definitions/routes.Nullable-bool'
+      terms_url:
+        $ref: '#/definitions/routes.Nullable-string'
       website_url:
         $ref: '#/definitions/routes.Nullable-string'
     type: object
